--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
 
   
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
 
   
 
